Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -9,5 +9,6 @@
   "dhp257:1": "proceni druge bez žurbe, ",
   "dhp257:2": "pravedno i bez naklonosti, ",
   "dhp257:3": "tek takvog mudraca, čuvara zakona, ",
-  "dhp257:4": "pravednikom zovu. "
+  "dhp257:4": "pravednikom zovu. ",
+  "dhp258:1": "Nije neko mudar "
 }
