Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -11,5 +11,6 @@
   "dhp257:3": "tek takvog mudraca, čuvara zakona, ",
   "dhp257:4": "pravednikom zovu. ",
   "dhp258:1": "Nije neko mudar ",
-  "dhp258:2": "samo zato što mnogo priča. "
+  "dhp258:2": "samo zato što mnogo priča. ",
+  "dhp258:3": "Ko je spokojan, bez mržnje i straha, "
 }
