--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -12,5 +12,6 @@
   "dhp257:4": "pravednikom zovu. ",
   "dhp258:1": "Nije neko mudar ",
   "dhp258:2": "samo zato što mnogo priča. ",
-  "dhp258:3": "Ko je spokojan, bez mržnje i straha, "
+  "dhp258:3": "Ko je spokojan, bez mržnje i straha, ",
+  "dhp258:4": "toga mudracem zovu. "
 }
