--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -13,5 +13,6 @@
   "dhp258:1": "Nije neko mudar ",
   "dhp258:2": "samo zato što mnogo priča. ",
   "dhp258:3": "Ko je spokojan, bez mržnje i straha, ",
-  "dhp258:4": "toga mudracem zovu. "
+  "dhp258:4": "toga mudracem zovu. ",
+  "dhp259:1": "Nije neko znalac Dhamme "
 }
