--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -14,5 +14,6 @@
   "dhp258:2": "samo zato što mnogo priča. ",
   "dhp258:3": "Ko je spokojan, bez mržnje i straha, ",
   "dhp258:4": "toga mudracem zovu. ",
-  "dhp259:1": "Nije neko znalac Dhamme "
+  "dhp259:1": "Nije neko znalac Dhamme ",
+  "dhp259:2": "samo zato što mnogo priča. "
 }
