Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -15,5 +15,6 @@
   "dhp258:3": "Ko je spokojan, bez mržnje i straha, ",
   "dhp258:4": "toga mudracem zovu. ",
   "dhp259:1": "Nije neko znalac Dhamme ",
-  "dhp259:2": "samo zato što mnogo priča. "
+  "dhp259:2": "samo zato što mnogo priča. ",
+  "dhp259:3": "Onaj ko i malo čuje, "
 }
