--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -16,5 +16,6 @@
   "dhp258:4": "toga mudracem zovu. ",
   "dhp259:1": "Nije neko znalac Dhamme ",
   "dhp259:2": "samo zato što mnogo priča. ",
-  "dhp259:3": "Onaj ko i malo čuje, "
+  "dhp259:3": "Onaj ko i malo čuje, ",
+  "dhp259:4": "te sam za sebe razume Učenje, "
 }
