Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -17,5 +17,6 @@
   "dhp259:1": "Nije neko znalac Dhamme ",
   "dhp259:2": "samo zato što mnogo priča. ",
   "dhp259:3": "Onaj ko i malo čuje, ",
-  "dhp259:4": "te sam za sebe razume Učenje, "
+  "dhp259:4": "te sam za sebe razume Učenje, ",
+  "dhp259:5": "tek taj je znalac Dhamme, "
 }
