--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -19,5 +19,6 @@
   "dhp259:3": "Onaj ko i malo čuje, ",
   "dhp259:4": "te sam za sebe razume Učenje, ",
   "dhp259:5": "tek taj je znalac Dhamme, ",
-  "dhp259:6": "taj Učenje ne zanemaruje. "
+  "dhp259:6": "taj Učenje ne zanemaruje. ",
+  "dhp260:1": "Nije neko starešina "
 }
