Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -20,5 +20,6 @@
   "dhp259:4": "te sam za sebe razume Učenje, ",
   "dhp259:5": "tek taj je znalac Dhamme, ",
   "dhp259:6": "taj Učenje ne zanemaruje. ",
-  "dhp260:1": "Nije neko starešina "
+  "dhp260:1": "Nije neko starešina ",
+  "dhp260:2": "samo zato što mu je glava seda; "
 }
