--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -21,5 +21,6 @@
   "dhp259:5": "tek taj je znalac Dhamme, ",
   "dhp259:6": "taj Učenje ne zanemaruje. ",
   "dhp260:1": "Nije neko starešina ",
-  "dhp260:2": "samo zato što mu je glava seda; "
+  "dhp260:2": "samo zato što mu je glava seda; ",
+  "dhp260:3": "takav se naziva tek starcem "
 }
