Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -23,5 +23,6 @@
   "dhp260:1": "Nije neko starešina ",
   "dhp260:2": "samo zato što mu je glava seda; ",
   "dhp260:3": "takav se naziva tek starcem ",
-  "dhp260:4": "što vek svoj uzalud proćerda. "
+  "dhp260:4": "što vek svoj uzalud proćerda. ",
+  "dhp261:1": "U onome u kojem su "
 }
