--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -25,5 +25,6 @@
   "dhp260:3": "takav se naziva tek starcem ",
   "dhp260:4": "što vek svoj uzalud proćerda. ",
   "dhp261:1": "U onome u kojem su ",
-  "dhp261:2": "istina, Dhamma, nenasilje, obuzdanost, "
+  "dhp261:2": "istina, Dhamma, nenasilje, obuzdanost, ",
+  "dhp261:3": "ko je sve nečistoće odbacio, "
 }
