--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -29,5 +29,6 @@
   "dhp261:3": "ko je sve nečistoće odbacio, ",
   "dhp261:4": "njega starešinom zovu. ",
   "dhp262:1": "Niti samo svojim rečima, niti izgledom ",
-  "dhp262:2": "čovek uzor ne postaje, "
+  "dhp262:2": "čovek uzor ne postaje, ",
+  "dhp262:3": "ako je uz to zavidan, "
 }
