Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -31,5 +31,6 @@
   "dhp262:1": "Niti samo svojim rečima, niti izgledom ",
   "dhp262:2": "čovek uzor ne postaje, ",
   "dhp262:3": "ako je uz to zavidan, ",
-  "dhp262:4": "sebičan, lažljiv. "
+  "dhp262:4": "sebičan, lažljiv. ",
+  "dhp263:1": "Ko je presekao, uklonio i uništio "
 }
