Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -32,5 +32,6 @@
   "dhp262:2": "čovek uzor ne postaje, ",
   "dhp262:3": "ako je uz to zavidan, ",
   "dhp262:4": "sebičan, lažljiv. ",
-  "dhp263:1": "Ko je presekao, uklonio i uništio "
+  "dhp263:1": "Ko je presekao, uklonio i uništio ",
+  "dhp263:2": "koren svega toga, "
 }
