--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -33,5 +33,6 @@
   "dhp262:3": "ako je uz to zavidan, ",
   "dhp262:4": "sebičan, lažljiv. ",
   "dhp263:1": "Ko je presekao, uklonio i uništio ",
-  "dhp263:2": "koren svega toga, "
+  "dhp263:2": "koren svega toga, ",
+  "dhp263:3": "tek takav mudrac, što mržnju odbaci, "
 }
