Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -35,5 +35,6 @@
   "dhp263:1": "Ko je presekao, uklonio i uništio ",
   "dhp263:2": "koren svega toga, ",
   "dhp263:3": "tek takav mudrac, što mržnju odbaci, ",
-  "dhp263:4": "uzorom se zove. "
+  "dhp263:4": "uzorom se zove. ",
+  "dhp264:1": "Nije asketa neko obrijane glave, "
 }
