--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -37,5 +37,6 @@
   "dhp263:3": "tek takav mudrac, što mržnju odbaci, ",
   "dhp263:4": "uzorom se zove. ",
   "dhp264:1": "Nije asketa neko obrijane glave, ",
-  "dhp264:2": "a nemoralan i lažljiv. "
+  "dhp264:2": "a nemoralan i lažljiv. ",
+  "dhp264:3": "Prepunog želja i mržnje, "
 }
