Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -38,5 +38,6 @@
   "dhp263:4": "uzorom se zove. ",
   "dhp264:1": "Nije asketa neko obrijane glave, ",
   "dhp264:2": "a nemoralan i lažljiv. ",
-  "dhp264:3": "Prepunog želja i mržnje, "
+  "dhp264:3": "Prepunog želja i mržnje, ",
+  "dhp264:4": "kako je moguće asketom zvati? "
 }
