--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -40,5 +40,6 @@
   "dhp264:2": "a nemoralan i lažljiv. ",
   "dhp264:3": "Prepunog želja i mržnje, ",
   "dhp264:4": "kako je moguće asketom zvati? ",
-  "dhp265:1": "Ko se sa rđavim delima izbori, "
+  "dhp265:1": "Ko se sa rđavim delima izbori, ",
+  "dhp265:2": "malim i velikim podjednako, "
 }
