Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -42,5 +42,6 @@
   "dhp264:4": "kako je moguće asketom zvati? ",
   "dhp265:1": "Ko se sa rđavim delima izbori, ",
   "dhp265:2": "malim i velikim podjednako, ",
-  "dhp265:3": "taj se asketom zove, "
+  "dhp265:3": "taj se asketom zove, ",
+  "dhp265:4": "jer zlo svako odbacio je. "
 }
