Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -43,5 +43,6 @@
   "dhp265:1": "Ko se sa rđavim delima izbori, ",
   "dhp265:2": "malim i velikim podjednako, ",
   "dhp265:3": "taj se asketom zove, ",
-  "dhp265:4": "jer zlo svako odbacio je. "
+  "dhp265:4": "jer zlo svako odbacio je. ",
+  "dhp266:1": "Nije monah neko "
 }
