Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -44,5 +44,6 @@
   "dhp265:2": "malim i velikim podjednako, ",
   "dhp265:3": "taj se asketom zove, ",
   "dhp265:4": "jer zlo svako odbacio je. ",
-  "dhp266:1": "Nije monah neko "
+  "dhp266:1": "Nije monah neko ",
+  "dhp266:2": "ko samo hranu od drugih prosi; "
 }
