Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -46,5 +46,6 @@
   "dhp265:4": "jer zlo svako odbacio je. ",
   "dhp266:1": "Nije monah neko ",
   "dhp266:2": "ko samo hranu od drugih prosi; ",
-  "dhp266:3": "ko tek spoljašnju formu sledi, "
+  "dhp266:3": "ko tek spoljašnju formu sledi, ",
+  "dhp266:4": "istinski monah nije. "
 }
