--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -48,5 +48,6 @@
   "dhp266:2": "ko samo hranu od drugih prosi; ",
   "dhp266:3": "ko tek spoljašnju formu sledi, ",
   "dhp266:4": "istinski monah nije. ",
-  "dhp267:1": "Onaj ko se u svetu ovom "
+  "dhp267:1": "Onaj ko se u svetu ovom ",
+  "dhp267:2": "iznad i lošeg i dobrog uzdigne, "
 }
