Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -50,5 +50,6 @@
   "dhp266:4": "istinski monah nije. ",
   "dhp267:1": "Onaj ko se u svetu ovom ",
   "dhp267:2": "iznad i lošeg i dobrog uzdigne, ",
-  "dhp267:3": "ko njime hodi prozrevši ga, "
+  "dhp267:3": "ko njime hodi prozrevši ga, ",
+  "dhp267:4": "tek taj se zaista monahom zove. "
 }
