Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -52,5 +52,6 @@
   "dhp267:2": "iznad i lošeg i dobrog uzdigne, ",
   "dhp267:3": "ko njime hodi prozrevši ga, ",
   "dhp267:4": "tek taj se zaista monahom zove. ",
-  "dhp268:1": "Ne biva utihnulim mudracem onaj ko ćuti, "
+  "dhp268:1": "Ne biva utihnulim mudracem onaj ko ćuti, ",
+  "dhp268:2": "pun zabluda i neznanja, "
 }
