--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -53,5 +53,6 @@
   "dhp267:3": "ko njime hodi prozrevši ga, ",
   "dhp267:4": "tek taj se zaista monahom zove. ",
   "dhp268:1": "Ne biva utihnulim mudracem onaj ko ćuti, ",
-  "dhp268:2": "pun zabluda i neznanja, "
+  "dhp268:2": "pun zabluda i neznanja, ",
+  "dhp268:3": "već onaj ko, kao da u ruci vagu drži, "
 }
