--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -55,5 +55,6 @@
   "dhp268:1": "Ne biva utihnulim mudracem onaj ko ćuti, ",
   "dhp268:2": "pun zabluda i neznanja, ",
   "dhp268:3": "već onaj ko, kao da u ruci vagu drži, ",
-  "dhp268:4": "odmerava i dobro i zlo. "
+  "dhp268:4": "odmerava i dobro i zlo. ",
+  "dhp269:1": "Kad zlo izbegava, "
 }
