--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -58,5 +58,6 @@
   "dhp268:4": "odmerava i dobro i zlo. ",
   "dhp269:1": "Kad zlo izbegava, ",
   "dhp269:2": "tad se mudrac mudracem zove, ",
-  "dhp269:3": "kad prozre oba sveta, "
+  "dhp269:3": "kad prozre oba sveta, ",
+  "dhp269:4": "zbog toga se mudracem zove. "
 }
