Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -60,5 +60,6 @@
   "dhp269:2": "tad se mudrac mudracem zove, ",
   "dhp269:3": "kad prozre oba sveta, ",
   "dhp269:4": "zbog toga se mudracem zove. ",
-  "dhp270:1": "Nije plemenit onaj "
+  "dhp270:1": "Nije plemenit onaj ",
+  "dhp270:2": "ko druga bića povređuje; "
 }
