--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -61,5 +61,6 @@
   "dhp269:3": "kad prozre oba sveta, ",
   "dhp269:4": "zbog toga se mudracem zove. ",
   "dhp270:1": "Nije plemenit onaj ",
-  "dhp270:2": "ko druga bića povređuje; "
+  "dhp270:2": "ko druga bića povređuje; ",
+  "dhp270:3": "tek kad pred svakim bićem štap ukloni, "
 }
