Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -62,5 +62,6 @@
   "dhp269:4": "zbog toga se mudracem zove. ",
   "dhp270:1": "Nije plemenit onaj ",
   "dhp270:2": "ko druga bića povređuje; ",
-  "dhp270:3": "tek kad pred svakim bićem štap ukloni, "
+  "dhp270:3": "tek kad pred svakim bićem štap ukloni, ",
+  "dhp270:4": "tad se plemenitim zove. "
 }
