Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -63,5 +63,6 @@
   "dhp270:1": "Nije plemenit onaj ",
   "dhp270:2": "ko druga bića povređuje; ",
   "dhp270:3": "tek kad pred svakim bićem štap ukloni, ",
-  "dhp270:4": "tad se plemenitim zove. "
+  "dhp270:4": "tad se plemenitim zove. ",
+  "dhp271:1": "Ne zadovolji se pravilima i obredima, "
 }
