Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -64,5 +64,6 @@
   "dhp270:2": "ko druga bića povređuje; ",
   "dhp270:3": "tek kad pred svakim bićem štap ukloni, ",
   "dhp270:4": "tad se plemenitim zove. ",
-  "dhp271:1": "Ne zadovolji se pravilima i obredima, "
+  "dhp271:1": "Ne zadovolji se pravilima i obredima, ",
+  "dhp271:2": "niti velikim znanjem, "
 }
