Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -65,5 +65,6 @@
   "dhp270:3": "tek kad pred svakim bićem štap ukloni, ",
   "dhp270:4": "tad se plemenitim zove. ",
   "dhp271:1": "Ne zadovolji se pravilima i obredima, ",
-  "dhp271:2": "niti velikim znanjem, "
+  "dhp271:2": "niti velikim znanjem, ",
+  "dhp271:3": "ni dobrom koncentracijom, "
 }
