--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -66,5 +66,6 @@
   "dhp270:4": "tad se plemenitim zove. ",
   "dhp271:1": "Ne zadovolji se pravilima i obredima, ",
   "dhp271:2": "niti velikim znanjem, ",
-  "dhp271:3": "ni dobrom koncentracijom, "
+  "dhp271:3": "ni dobrom koncentracijom, ",
+  "dhp271:4": "niti životom u osami, "
 }
