Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -67,5 +67,6 @@
   "dhp271:1": "Ne zadovolji se pravilima i obredima, ",
   "dhp271:2": "niti velikim znanjem, ",
   "dhp271:3": "ni dobrom koncentracijom, ",
-  "dhp271:4": "niti životom u osami, "
+  "dhp271:4": "niti životom u osami, ",
+  "dhp272:1": "misleći: „Uživam u sreći obuzdanosti, "
 }
