Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -69,5 +69,6 @@
   "dhp271:3": "ni dobrom koncentracijom, ",
   "dhp271:4": "niti životom u osami, ",
   "dhp272:1": "misleći: „Uživam u sreći obuzdanosti, ",
-  "dhp272:2": "dalekoj prostom puku\", "
+  "dhp272:2": "dalekoj prostom puku\", ",
+  "dhp272:3": "ukoliko, o monaše, nečistoće uma "
 }
