Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -1,4 +1,5 @@
 {
   "dhp273:0.1": "Kratka zbirka Budnih govora ",
-  "dhp273:0.2": "Reči mudrosti "
+  "dhp273:0.2": "Reči mudrosti ",
+  "dhp273:0.3": "Put "
 }
