Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -1,5 +1,6 @@
 {
   "dhp273:0.1": "Kratka zbirka Budnih govora ",
   "dhp273:0.2": "Reči mudrosti ",
-  "dhp273:0.3": "Put "
+  "dhp273:0.3": "Put ",
+  "dhp273:1": "Među putevima, najbolji je osmostruki, "
 }
