Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -4,5 +4,6 @@
   "dhp273:0.3": "Put ",
   "dhp273:1": "Među putevima, najbolji je osmostruki, ",
   "dhp273:2": "među istinama, četiri plemenite, ",
-  "dhp273:3": "među stanjima uma, najbolje je odsustvo strasti, "
+  "dhp273:3": "među stanjima uma, najbolje je odsustvo strasti, ",
+  "dhp273:4": "među ljudima, oni što do uvida stigoše. "
 }
