Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -5,5 +5,6 @@
   "dhp273:1": "Među putevima, najbolji je osmostruki, ",
   "dhp273:2": "među istinama, četiri plemenite, ",
   "dhp273:3": "među stanjima uma, najbolje je odsustvo strasti, ",
-  "dhp273:4": "među ljudima, oni što do uvida stigoše. "
+  "dhp273:4": "među ljudima, oni što do uvida stigoše. ",
+  "dhp274:1": "Ovo je put; do pročišćenja uma "
 }
