--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -7,5 +7,6 @@
   "dhp273:3": "među stanjima uma, najbolje je odsustvo strasti, ",
   "dhp273:4": "među ljudima, oni što do uvida stigoše. ",
   "dhp274:1": "Ovo je put; do pročišćenja uma ",
-  "dhp274:2": "drugoga nema; "
+  "dhp274:2": "drugoga nema; ",
+  "dhp274:3": "njime se zaputite "
 }
