Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -9,5 +9,6 @@
   "dhp274:1": "Ovo je put; do pročišćenja uma ",
   "dhp274:2": "drugoga nema; ",
   "dhp274:3": "njime se zaputite ",
-  "dhp274:4": " i zavaraćete Māru. "
+  "dhp274:4": " i zavaraćete Māru. ",
+  "dhp275:1": "Idući tim putem, "
 }
