Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -10,5 +10,6 @@
   "dhp274:2": "drugoga nema; ",
   "dhp274:3": "njime se zaputite ",
   "dhp274:4": " i zavaraćete Māru. ",
-  "dhp275:1": "Idući tim putem, "
+  "dhp275:1": "Idući tim putem, ",
+  "dhp275:2": "na kraj patnje stići ćete. "
 }
