Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -12,5 +12,6 @@
   "dhp274:4": " i zavaraćete Māru. ",
   "dhp275:1": "Idući tim putem, ",
   "dhp275:2": "na kraj patnje stići ćete. ",
-  "dhp275:3": "Uvideo sam kako strelu iščupati "
+  "dhp275:3": "Uvideo sam kako strelu iščupati ",
+  "dhp275:4": "i tome sam vas podučio. "
 }
