Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -16,5 +16,6 @@
   "dhp275:4": "i tome sam vas podučio. ",
   "dhp276:1": "Svoj napor uložiti morate, ",
   "dhp276:2": "Budni tek pravac pokazuju. ",
-  "dhp276:3": "Ko putem ovim sabran ide, "
+  "dhp276:3": "Ko putem ovim sabran ide, ",
+  "dhp276:4": "od okova Mārinih oslobođen biva. "
 }
