--- a/translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json
@@ -1,3 +1,3 @@
 {
-  "sn22.79:1.2": "Qualsiasi asceta o bramino che non conosca così com’è (yathābhūtaṁ) ‘questo è il dukkha,’ ‘questa è la causa del dukkha,’ ‘questa è la fine del dukkha,’ ‘questo è il percorso che conduce alla fine del dukkha,’ ** "
+  "sn22.79:1.2": "Qualsiasi asceta o bramino "
 }
