Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc29_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc29_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc29_translation-en-brahmali.json
@@ -16,7 +16,7 @@
   "pli-tv-bu-vb-pc29:1.8": "“Venerable Sāriputta, Venerable Mahāmoggallāna, Venerable Mahākaccāna, Venerable Mahākoṭṭhika, Venerable Mahākappina, Venerable Mahācunda, Venerable Anuruddha, Venerable Revata, Venerable Upāli, Venerable Ānanda, and Venerable Rāhula.” ",
   "pli-tv-bu-vb-pc29:1.9": "“But why do you invite such inferior monks instead of the great ones?” ",
   "pli-tv-bu-vb-pc29:1.10": "“Who are these great monks?” ",
-  "pli-tv-bu-vb-pc29:1.11": "“Venerable Devadatta, Venerable Kokālika, Venerable Kaṭamodakatissaka, Venerable Khaṇḍadeviyā-putta, and Venerable Samuddadatta.” ",
+  "pli-tv-bu-vb-pc29:1.11": "“Venerable Devadatta, Venerable Kokālika, Venerable Kaṭamodakatissaka, Venerable Khaṇḍadeviyāputta, and Venerable Samuddadatta.” ",
   "pli-tv-bu-vb-pc29:1.12": "While this conversation was taking place, the senior monks entered. ",
   "pli-tv-bu-vb-pc29:1.13": "Thullanandā said, “Is it true that you’ve invited these great monks?” ",
   "pli-tv-bu-vb-pc29:1.14": "“Just before you called them inferior and now you call them great.” ",
