--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss11_translation-en-brahmali.json
@@ -9,7 +9,7 @@
   "pli-tv-bu-vb-ss11:1.3": "The monks were saying, ",
   "pli-tv-bu-vb-ss11:1.4": "“Devadatta speaks contrary to the Teaching and the training. ",
   "pli-tv-bu-vb-ss11:1.5": "How can he pursue schism in the Sangha?” ",
-  "pli-tv-bu-vb-ss11:1.6": "But Kokālika, Kaṭamodakatissaka, Khaṇḍadeviyā-putta, and Samuddadatta said to those monks, ",
+  "pli-tv-bu-vb-ss11:1.6": "But Kokālika, Kaṭamodakatissaka, Khaṇḍadeviyāputta, and Samuddadatta said to those monks, ",
   "pli-tv-bu-vb-ss11:1.7": "“No, Venerables, ",
   "pli-tv-bu-vb-ss11:1.8": "Devadatta speaks in accordance with the Teaching and the training. ",
   "pli-tv-bu-vb-ss11:1.9": "And he speaks with our consent and approval. He knows about us and speaks for us, and we approve of this.” ",
