--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc31_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc31_translation-en-brahmali.json
@@ -18,7 +18,7 @@
   "pli-tv-bu-vb-pc31:1.10": "while the monastics of other religions left. ",
   "pli-tv-bu-vb-pc31:1.11": "People complained and criticized them, ",
   "pli-tv-bu-vb-pc31:1.12": "“How can the Sakyan monastics stay on and on, eating alms at the guesthouse? ",
-  "pli-tv-bu-vb-pc31:1.13": "We don’t prepare the alms-food just for them; ",
+  "pli-tv-bu-vb-pc31:1.13": "We don’t prepare the almsfood just for them; ",
   "pli-tv-bu-vb-pc31:1.14": "we prepare it for everyone.” ",
   "pli-tv-bu-vb-pc31:1.15": "The monks heard the complaints of those people, ",
   "pli-tv-bu-vb-pc31:1.16": "and the monks of few desires complained and criticized those monks, ",
