Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -3315,7 +3315,7 @@
   "pli-tv-kd1:79.4.115": "And mute and deaf; ",
   "pli-tv-kd1:79.4.116": "And blind, mute, and deaf, ",
   "pli-tv-kd1:79.4.117": "And formal support for the shameless. ",
-  "pli-tv-kd1:79.4.118": "And should live, so travelling, ",
+  "pli-tv-kd1:79.4.118": "And should live, so traveling, ",
   "pli-tv-kd1:79.4.119": "By one who is asked, notice; ",
   "pli-tv-kd1:79.4.120": "Please come, they argued, ",
   "pli-tv-kd1:79.4.121": "With one preceptor, Kassapa. ",
