Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd15_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd15_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd15_translation-en-brahmali.json
@@ -1571,7 +1571,7 @@
   "pli-tv-kd15:37.1.66": "And bound the sandals. ",
   "pli-tv-kd15:37.1.67": "And sandal bag, ",
   "pli-tv-kd15:37.1.68": "And shoulder strap, string; ",
-  "pli-tv-kd15:37.1.69": "Unallowable water while travelling, ",
+  "pli-tv-kd15:37.1.69": "Unallowable water while traveling, ",
   "pli-tv-kd15:37.1.70": "Water filter, cloth. ",
   "pli-tv-kd15:37.1.71": "Water strainer, two monks, ",
   "pli-tv-kd15:37.1.72": "The Sage went to Vesālī; ",
