--- a/translation/en/brahmali/vinaya/pli-tv-bu-pm_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-pm_translation-en-brahmali.json
@@ -427,7 +427,7 @@
   "pli-tv-bu-pm:130.1": "If a monk gives the full ordination to a person he knows is less than twenty years old, he commits an offense entailing confession. Moreover, that person has not received the full ordination and those monks are blameworthy. ",
   "pli-tv-bu-pm:131.0": "Confession 66: Traveling With Thieves ",
   "pli-tv-bu-pm:131.1": "If a monk knowingly travels by appointment with a group of thieves, even just to the next village, he commits an offense entailing confession. ",
-  "pli-tv-bu-pm:132.0": "Confession 67 Travelling by Arrangement ",
+  "pli-tv-bu-pm:132.0": "Confession 67 Traveling by Arrangement ",
   "pli-tv-bu-pm:132.1": "If a monk travels by appointment with a woman, even just to the next village, he commits an offense entailing confession. ",
   "pli-tv-bu-pm:133.0": "Confession 68: Obstructions ",
   "pli-tv-bu-pm:133.1": "If a monk says, ",
