--- a/translation/en/brahmali/vinaya/pli-tv-bi-pm_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bi-pm_translation-en-brahmali.json
@@ -609,7 +609,7 @@
   "pli-tv-bi-pm:212.1": "If a nun uses water that she knows contains living beings, she commits an offense entailing confession. ",
   "pli-tv-bi-pm:213.0": "Confession 144: Reopening a Legal Issue ",
   "pli-tv-bi-pm:213.1": "If a nun reopens a legal issue that she knows has been legitimately settled, she commits an offense entailing confession. ",
-  "pli-tv-bi-pm:214.0": "Confession 145: Travelling With Thieves ",
+  "pli-tv-bi-pm:214.0": "Confession 145: Traveling With Thieves ",
   "pli-tv-bi-pm:214.1": "If a nun knowingly travels by appointment with a group of thieves, even just to the next village, she commits an offense entailing confession. ",
   "pli-tv-bi-pm:215.0": "Confession 146: Obstructions ",
   "pli-tv-bi-pm:215.1": "If a nun says, ",
