--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc34_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc34_translation-en-brahmali.json
@@ -20,7 +20,7 @@
   "pli-tv-bu-vb-pc34:1.1.19": "adding, “If Kāṇā doesn’t come, I’ll find another wife.” ",
   "pli-tv-bu-vb-pc34:1.1.20": "But once again all the pastries were given to monks. ",
   "pli-tv-bu-vb-pc34:1.1.26": "Kāṇā’s husband found another wife, ",
-  "pli-tv-bu-vb-pc34:1.1.27": "And when Kāṇā heard what had happened, she cried. ",
+  "pli-tv-bu-vb-pc34:1.1.27": "and when Kāṇā heard what had happened, she cried. ",
   "pli-tv-bu-vb-pc34:1.1.28": "Soon afterwards, after robing up in the morning, the Buddha took his bowl and robe and went to Kāṇamātā’s house where he sat down on the prepared seat. ",
   "pli-tv-bu-vb-pc34:1.1.29": "Kāṇamātā approached the Buddha, bowed, and sat down. ",
   "pli-tv-bu-vb-pc34:1.1.30": "The Buddha asked her why Kāṇā was crying, and she told him what had happened. ",
