--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc42_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc42_translation-en-brahmali.json
@@ -10,7 +10,7 @@
   "pli-tv-bu-vb-pc42:1.3": "“Come, let’s go to the village for alms.” ",
   "pli-tv-bu-vb-pc42:1.4": "Then, without getting him any food, he sent him away, saying, ",
   "pli-tv-bu-vb-pc42:1.5": "“Go away! I’m not comfortable talking or sitting with you, but only if I talk and sit by myself.” ",
-  "pli-tv-bu-vb-pc42:1.6": "But since the right time for eating was coming to an end, the student was unable to walk for alms. And as he returned to the monastery, there was nobody offering food, and so he missed his meal. ",
+  "pli-tv-bu-vb-pc42:1.6": "But since the right time for eating was coming to an end, the student was unable to walk for alms. As he returned to the monastery, there was nobody offering food, and so he missed his meal. ",
   "pli-tv-bu-vb-pc42:1.7": "He then went to the monastery and told the monks what had happened. ",
   "pli-tv-bu-vb-pc42:1.8": "The monks of few desires complained and criticized Upananda, ",
   "pli-tv-bu-vb-pc42:1.9": "“How could Venerable Upananda say to a monk, ‘Come, let’s go to the village for alms,’ and then send him away without getting him any food?” … ",
