--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc56_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc56_translation-en-brahmali.json
@@ -32,7 +32,7 @@
   "pli-tv-bu-vb-pc56:1.2.8": "“Monks, I allow a sick monk to light a fire to warm himself, or to have one lit. ",
   "pli-tv-bu-vb-pc56:1.2.9": "And so, monks, this training rule should be recited like this: ",
   "pli-tv-bu-vb-pc56:1.2.10.0": "Second preliminary ruling ",
-  "pli-tv-bu-vb-pc56:1.2.10.1": "‘If a monk who is not sick lights a fire to warm himself, or has one lit, he commits an offense entailing confession.’ ",
+  "pli-tv-bu-vb-pc56:1.2.10.1": "‘If a monk who is not sick lights a fire to warm himself, or has one lit, he commits an offense entailing confession.’” ",
   "pli-tv-bu-vb-pc56:1.2.11": "In this way the Buddha laid down this training rule for the monks. ",
   "pli-tv-bu-vb-pc56:2.0": "Third sub-story ",
   "pli-tv-bu-vb-pc56:2.1": "Soon afterwards the monks did not light lamps, small fires, or saunas because they were afraid of wrongdoing. ",
