--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc60_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc60_translation-en-brahmali.json
@@ -13,7 +13,7 @@
   "pli-tv-bu-vb-pc60:1.6": "The monks from the group of six laughed, but the monks from the group of seventeen cried. ",
   "pli-tv-bu-vb-pc60:1.7": "The monks asked them, ",
   "pli-tv-bu-vb-pc60:1.8": "“Why are you crying?” ",
-  "pli-tv-bu-vb-pc60:1.9": "“Because the monks from the group of six have hidden our bowls and robes.” ",
+  "pli-tv-bu-vb-pc60:1.9": "“’Cause the monks from the group of six have hidden our bowls and robes.” ",
   "pli-tv-bu-vb-pc60:1.10": "The monks of few desires complained and criticized them, ",
   "pli-tv-bu-vb-pc60:1.11": "“How could the monks from the group of six hide the bowls and robes of other monks?” … ",
   "pli-tv-bu-vb-pc60:1.12": "“Is it true, monks, that you did this?” ",
