--- a/translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json
@@ -1,3 +1,3 @@
 {
-  "sn22.79:1.2": "Qualsiasi asceta o bramino "
+  "sn22.79:1.2": "Qualsiasi asceta o bramino si ricordi le proprie diverse vite passate, ognuno di loro si ricorda le cinque cataste ardenti, o uno di essi. "
 }
