--- a/translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json
@@ -1,5 +1,6 @@
 {
   "sn22.79:1.2": "Qualsiasi asceta o bramino si ricordi le proprie diverse vite passate, ognuno di loro si ricorda le cinque cataste ardenti, o uno di essi. ",
   "sn22.79:1.3": "Quali cinque? ",
-  "sn22.79:1.4": "‘In passato avevo questa forma’ "
+  "sn22.79:1.4": "‘In passato avevo questa forma’ ",
+  "sn22.79:1.5": "quando si ricorda questo, si ricorda la forma/materia. "
 }
