--- a/translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json
@@ -3,5 +3,6 @@
   "sn22.79:1.3": "Quali cinque? ",
   "sn22.79:1.4": "‘In passato avevo questa forma’ ",
   "sn22.79:1.5": "quando si ricorda questo, si ricorda solo la forma/materia/fattezze. ",
-  "sn22.79:2.1": "E che cosa chiamate forma? "
+  "sn22.79:2.1": "E che cosa chiamate forma? ",
+  "sn22.79:2.2": "Si deforma, per quello si chiama forma. "
 }
