--- a/translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json
@@ -3,7 +3,7 @@
   "sn22.79:1.3": "Quali cinque? ",
   "sn22.79:1.4": "‘In passato avevo questa forma’ ",
   "sn22.79:1.5": "quando si ricorda questo, si ricorda solo la forma/materia/fattezze. ",
-  "sn22.79:2.1": "E che cosa chiamate forma? ",
+  "sn22.79:2.1": "E perché si chiama forma? ",
   "sn22.79:2.2": "Si deforma (si disfa), per quello si chiama forma. ",
   "sn22.79:2.3": "Per cosa si deforma? ",
   "sn22.79:2.4": "Si deforma per il freddo, il caldo, la fame, la sete, il contatto con tafani, zanzare, vento, calore, e insetti striscianti. "
