Translations by ayyasoma to translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json

--- a/translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json
@@ -6,5 +6,6 @@
   "sn22.79:2.1": "E perché si chiama forma? ",
   "sn22.79:2.2": "Si deforma (si disfa), per quello si chiama forma. ",
   "sn22.79:2.3": "Per cosa si deforma/trasforma? ",
-  "sn22.79:2.4": "Si deforma/trasforma per il freddo, il caldo, la fame, la sete, il contatto con tafani, zanzare, vento, calore, e insetti striscianti. "
+  "sn22.79:2.4": "Si deforma/trasforma per il freddo, il caldo, la fame, la sete, il contatto con tafani, zanzare, vento, calore, e insetti striscianti. ",
+  "sn22.79:3.4": "sente... "
 }
