--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -213,7 +213,7 @@
   "pli-tv-kd10:2.16.9": "hatred only ends through love.” ",
   "pli-tv-kd10:2.16.10": "It wouldn’t be right for me to ignore my father’s advice.’ And he returned the sword to its scabbard. ",
   "pli-tv-kd10:2.16.11": "A second ",
-  "pli-tv-kd10:2.16.18": "and a third time he had the same thoughts, ",
+  "pli-tv-kd10:2.16.18": "",
   "pli-tv-kd10:2.16.27": "and each time he ended up returning the sword to its scabbard. ",
   "pli-tv-kd10:2.16.28": "Just then King Brahmadatta suddenly got up, frightened and alarmed. ",
   "pli-tv-kd10:2.16.29": "The prince asked him what was the matter, ",
