Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -214,7 +214,7 @@
   "pli-tv-kd10:2.16.10": "It wouldn’t be right for me to ignore my father’s advice.’ And he returned the sword to its scabbard. ",
   "pli-tv-kd10:2.16.11": "A second ",
   "pli-tv-kd10:2.16.18": "",
-  "pli-tv-kd10:2.16.27": "and each time he ended up returning the sword to its scabbard. ",
+  "pli-tv-kd10:2.16.27": "",
   "pli-tv-kd10:2.16.28": "Just then King Brahmadatta suddenly got up, frightened and alarmed. ",
   "pli-tv-kd10:2.16.29": "The prince asked him what was the matter, ",
   "pli-tv-kd10:2.16.30": "and the king said, ‘I just dreamed that Prince Dīghāvu, the son of Dīghīti the king of Kosala, attacked me with a sword.’ ",
