Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd10_translation-en-brahmali.json
@@ -212,7 +212,7 @@
   "pli-tv-kd10:2.16.8": "For hatred never ends through hatred; ",
   "pli-tv-kd10:2.16.9": "hatred only ends through love.” ",
   "pli-tv-kd10:2.16.10": "It wouldn’t be right for me to ignore my father’s advice.’ And he returned the sword to its scabbard. ",
-  "pli-tv-kd10:2.16.11": "A second ",
+  "pli-tv-kd10:2.16.11": "A second and a third time he had the same thoughts, and each time he ended up returning the sword to its scabbard. ",
   "pli-tv-kd10:2.16.18": "",
   "pli-tv-kd10:2.16.27": "",
   "pli-tv-kd10:2.16.28": "Just then King Brahmadatta suddenly got up, frightened and alarmed. ",
