Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd15_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd15_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd15_translation-en-brahmali.json
@@ -1662,7 +1662,7 @@
   "pli-tv-kd15:37.1.157": "Stuck in the throat, and forest, ",
   "pli-tv-kd15:37.1.158": "Counter-fire, tree, with elephant; ",
   "pli-tv-kd15:37.1.159": "Yameḷa, cosmology, ",
-  "pli-tv-kd15:37.1.160": "They learnt, they taught. ",
+  "pli-tv-kd15:37.1.160": "They learned, they taught. ",
   "pli-tv-kd15:37.1.161": "Worldly talk, knowledge, ",
   "pli-tv-kd15:37.1.162": "He sneezed, blessing, and he ate; ",
   "pli-tv-kd15:37.1.163": "Stomach ache, and became filthy, ",
