Translations by ayyasoma to translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json

--- a/translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json
@@ -9,5 +9,6 @@
   "sn22.79:2.4": "Si deforma/trasforma per il freddo, il caldo, la fame, la sete, il contatto con tafani, zanzare, vento, calore, e insetti striscianti. ",
   "sn22.79:3.3": ".. ",
   "sn22.79:3.4": "sente... ",
-  "sn22.79:5.1": "E perché si chiama formazioni??? "
+  "sn22.79:5.1": "E perché si chiama formazioni??? ",
+  "sn22.79:5.2": "Perche' creano (fabbricano/disegnano) il creato... "
 }
