--- a/translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json
@@ -10,6 +10,6 @@
   "sn22.79:3.3": ".. ",
   "sn22.79:3.4": "sente... ",
   "sn22.79:5.1": "E perché si chiamano creazioni??? ",
-  "sn22.79:5.2": "Perche' creano (fabbricano/disegnano) il creato... ",
+  "sn22.79:5.2": "Perche' creano il condizionato... //Perche' creano (fabbricano/disegnano) il creato... ",
   "sn22.79:5.3": "E cosa creano? "
 }
